samples/_failures_safe/1761192154_a49d6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12a2374c.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_12a2374c.c:169:36: error: expected ‘;’ at end of input
  169 |         case TOKEN_OPERATOR: printf
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_12a2374c.c:169:9: error: expected declaration or statement at end of input
  169 |         case TOKEN_OPERATOR: printf
      |         ^~~~
./samples/SAFE/__tmp_12a2374c.c:169:9: error: expected declaration or statement at end of input
